feat: adicionar estrutura base do projeto .NET
- Criar solution com 5 projetos (API, Core, Infrastructure, SOAP, Tests)
- Implementar 8 entidades baseadas no schema MySQL
- Configurar Entity Framework Core com DbContext
- Implementar Repository Pattern
- Configurar JWT Authentication
- Configurar Swagger/OpenAPI
- Adicionar dependências necessárias (EF Core, JWT, Swashbuckle, SoapCore, xUnit)
- Configurar Program.cs com DI, CORS, autenticação
- Adicionar appsettings.example.json

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,12 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Analysis and documentation files (not code)
+ANALISE_COMPARATIVA.md
+ESTADO_ATUAL.md
+PROGRESSO.md
+
+# Keep appsettings.example.json but ignore actual appsettings.json
+appsettings.json
+!appsettings.example.json
