chore: remover guias de execução local do repositório
- Remover GUIA_EXECUCAO_LOCAL.md e README_EXECUCAO.md do tracking
- Adicionar ao .gitignore para manter apenas localmente

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ nupkg/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# Guias de execução local (apenas para uso pessoal)
+GUIA_EXECUCAO_LOCAL.md
+README_EXECUCAO.md
+
 # User-specific files
 *.rsuser
 *.suo
