--- a/pooltracker-web/package.json
+++ b/pooltracker-web/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
